added some graphs

--- a/code/describe_icd9code.ipynb
+++ b/code/describe_icd9code.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -959,21 +959,62 @@
       "|    49390|      2113|              Asthma NOS|             Asthma, unspecified type, unspecified|\n",
       "|     2767|      2111|         Hyperpotassemia|                                   Hyperpotassemia|\n",
       "+---------+----------+------------------------+--------------------------------------------------+\n",
+      "only showing top 50 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "spark.sql(\"\"\"\n",
+    "tmp = spark.sql(\"\"\"\n",
     "SELECT a.icd9_code, hadm_count, SHORT_TITLE, LONG_TITLE FROM\n",
     "    (SELECT icd9_code, COUNT(DISTINCT hadm_id) AS hadm_count\n",
     "    FROM diagnoses_icd_m2\n",
     "    GROUP BY icd9_code\n",
-    "    ORDER BY hadm_count DESC\n",
-    "    LIMIT 50) AS a\n",
+    "    ORDER BY hadm_count DESC) AS a\n",
     "JOIN diagnoses_icd_desc\n",
     "ON diagnoses_icd_desc.ICD9_CODE = a.icd9_code\n",
-    "\"\"\").show(n=50, truncate=50)"
+    "\"\"\")\n",
+    "\n",
+    "tmp.show(n=50, truncate=50)\n",
+    "\n",
+    "tmp2 = tmp.toPandas()\n",
+    "\n",
+    "import cPickle\n",
+    "f = open(\"graph_icd9code_hadmcount_panda.p\", 'wb')\n",
+    "cPickle.dump(tmp2, f, protocol=cPickle.HIGHEST_PROTOCOL)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "icd9_hadm_rdd = df_diag_m2.rdd.map(lambda x: (x.icd9_code, x.hadm_id)) \\\n",
+    "    .groupByKey().mapValues(lambda x: set(x)).collect()\n",
+    "icd9_hadm_rdd2 = sorted(icd9_hadm_rdd, key=lambda x: -len(x[1]))\n",
+    "N = len(icd9_hadm_rdd2)\n",
+    "hadmset = icd9_hadm_rdd2[0][1].copy()\n",
+    "y = [len(hadmset)]\n",
+    "\n",
+    "for i in xrange(1, N):\n",
+    "    hadmset.update(icd9_hadm_rdd2[i][1])\n",
+    "    y.append(len(hadmset))\n",
+    "\n",
+    "x = np.arange(1,N+1)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "import cPickle\n",
+    "f = open(\"graph_icd9code_hadmdist.p\", 'wb')\n",
+    "cPickle.dump(x, f, protocol=cPickle.HIGHEST_PROTOCOL)\n",
+    "cPickle.dump(y, f, protocol=cPickle.HIGHEST_PROTOCOL)\n",
+    "f.close()"
    ]
   },
   {
