Update gitignore for jupyter checkpoints

--- a/code/python3/preprocess.ipynb
+++ b/code/python3/preprocess.ipynb
@@ -419,13 +419,13 @@
    "source": [
     "import pickle\n",
     "\n",
-    "print topicd9[:10]\n",
+    "print (topicd9[:10])\n",
     "pickle.dump(topicd9[:10], open( \"./data/ICD9CODES_TOP10.p\", \"wb\" ))\n",
-    "print topicd9[:50]\n",
+    "print (topicd9[:50])\n",
     "pickle.dump(topicd9[:50], open( \"./data/ICD9CODES_TOP50.p\", \"wb\" ))\n",
-    "print topicd9[50:60]\n",
+    "print (topicd9[50:60])\n",
     "pickle.dump(topicd9[50:60], open( \"./data/ICD9CAT_TOP10.p\", \"wb\" ))\n",
-    "print topicd9[50:]\n",
+    "print (topicd9[50:])\n",
     "pickle.dump(topicd9[50:], open( \"./data/ICD9CAT_TOP50.p\", \"wb\" ))"
    ]
   },
